# BioNEV

./: .gitignore  LICENSE  README.md  index.html  requirements.txt  setup.cfg
data/CTD_DDA/: CTD_DDA.edgelist  node_list.txt
data/Clin_Term_COOC/: Clin_Term_COOC_labels.txt  label_list.txt  node_list.txt
data/DrugBank_DDI/: DrugBank_DDI.edgelist  node_list.txt
data/Mashup_PPI/: Mashup_PPI_labels.txt
data/NDFRT_DDA/: NDFRT_DDA.edgelist  node_list.txt
data/STRING_PPI/: STRING_PPI.edgelist  node_list.txt
data/node2vec_PPI/: node2vec_PPI_labels.txt
embeddings/: README.txt
src/: embed_train.py  evaluation.py  main.py  utils.py
src/GAE/: layers.py  model.py  optimizer.py  preprocessing.py
src/OpenNE/: classify.py  gf.py  graph.py  lap.py  line.py  node2vec.py  walker.py
src/bionev/: __main__.py  embed_train.py  evaluation.py  main.py  utils.py
src/bionev/GAE/: initialization.py  layers.py  model.py  optimizer.py  preprocessing.py  train_model.py
src/bionev/OpenNE/: classify.py  gf.py  graph.py  grarep.py  hope.py  lap.py  line.py  node2vec.py  sdne.py  walker.py
src/bionev/SVD/: model.py
src/bionev/struc2vec/: algorithms.py  algorithms_distances.py  graph.py  struc2vec.py  utils.py
src/bionev/struc2vec/pickles/: README.txt
src/struc2vec/: algorithms.py  graph.py  utils.py
